# political_strategy_game

./: CONVENTIONAL_COMMITS.md  README.md  README_COLLABORATIVE.md  TASK_4_1_COMPLETE.md  TASK_4_1_FINAL_SUMMARY.md  TASK_4_1_FIXES_SUMMARY.md  VERSIONING_STRATEGY.md  fix_security_audit.py  play_game.py  pytest.ini  requirements-llm.txt  test_fixes.py  test_llm_implementation.py  validate_ci_compatibility.py
political_strategy_game/: .env.template  .gitignore  DEVELOPMENT.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROGRESS.md  PROJECT_STATUS_REPORT.md  README.md  TASK_2_1_COMPLETION_SUMMARY.md  TASK_6_1_COMPLETION.md  civilization_demo.py  clean_validation_report.txt  clean_validation_results.json  debug_coup.py  demo.py  demo_advanced_politics.py  demo_event_system.py  diplomacy_demo.py  inline_server.py  live_visualization.html  manual_test.sh  play_game.py  pyproject.toml  quickstart.sh  requirements-bridge.txt  requirements.txt  setup.sh  setup_uv.sh  simple_visualization_server.py  test_conspiracy_comprehensive.py  test_conspiracy_management.py  test_toml.py  uv.toml  validate_ai_dynamics.py  validation_report.txt  validation_results.json  version_check.py  visualization_demo.html  visualization_server.py
political_strategy_game/.github/instructions/: memory.instruction.md  memory_task_progress.md  next_task_analysis.md  next_task_analysis_post_3_1.md  task_2_2_completion.md  task_2_2_progress.md  task_3_1_completion.md  task_3_2_completion.md  task_3_3_plan.md  task_4_1_completion.md  task_4_1_plan.md  task_4_2_completion.md  task_4_2_plan.md  task_4_3_plan.md
political_strategy_game/config/: __init__.py  game_config.py
political_strategy_game/debug/: debug_llm_caching.py  final_task_7_1_validation.py  validate_task_7_1.py
political_strategy_game/demo_memory/: default_civ_memories.json
political_strategy_game/demos/: demo.py  demo_agent_development_day2.py  demo_agent_development_day3.py  demo_agent_pool_day1.py  demo_ai_features.py  demo_citizen_system.py  demo_distribution_framework.py  demo_espionage.py  demo_event_system.py  demo_task_7_1.py  demo_task_7_1_performance.py  demo_technology_tree.py  resource_demo.py  task_5_2_visualization_demo.py
political_strategy_game/docs/: AI_FEATURES_OVERVIEW.md  context7_research_interactive_gameplay.md  interactive_gameplay_architecture.md
political_strategy_game/src/: __init__.py
political_strategy_game/src/bridge/: __init__.py  bridge_manager.py  demo_client.py  demo_server.py  event_broadcaster.py  game_engine_bridge.py  performance_profiler.py  state_serializer.py  turn_synchronizer.py
political_strategy_game/src/core/: __init__.py  advanced_politics.py  advisor.py  advisor_enhanced.py  advisor_technology.py  agent_development.py  agent_pool.py  citizen.py  civilization.py  diplomacy.py  espionage.py  espionage_integration.py  event_library.py  events.py  game_state.py  leader.py  memory.py  memory_factory.py  political_event.py  population_distribution.py  resources.py  technology_integration.py  technology_tree.py
political_strategy_game/src/interactive/: conspiracy_management.py  crisis_management.py  (+3 more)
political_strategy_game/tests/: conftest.py  test_advanced_memory.py  test_advanced_politics.py  test_advisor_enhanced.py  test_advisor_selection_mcda.py  test_agent_development_day2.py  test_agent_development_day3.py.disabled  test_agent_pool_day1.py  test_basic_integration.py  test_citizen_data_structure.py  test_civilization.py  test_collection_fix_documentation.py  test_conspiracy.py  test_core_structures.py  test_coverage_summary.py  test_dialogue.py  test_diplomacy.py  test_espionage.py  test_events.py  test_fix_documentation.py  test_information_warfare.py  test_memory.py  test_multi_advisor_integration.py  test_performance_optimization.py  test_personality_drift.py  test_population_distribution_day1.py  test_resources.py  test_save_load_basic.py  test_save_load_system.py  test_technology_tree_comprehensive.py  test_visualization_system.py
political_strategy_game/validation/: validate_ai_clean.py  validate_ai_dynamics_enhanced.py  validate_config.py
(+106 files in other folders)
